- include method can include non-JSON-Formated scripts, which are evaled in the
  global scope.
- Resource Viewer in Editor shows timing info and preview for Movie and Sound
  type Resources.
- Resource Viewers only show relevant Resource types and only the name column.
- Code snippet overlays are shown in the Code Editor instead of the entire Editor
  window.
- Changed UI to work reliably with mobile and extremely small resolutions.
- On Windows, notifications are shown as toast notifications if app is not
  active.
- On Windows, taskbar shows icon overlays based on app state.
- Improved tooltips for Resources.
- Resource Views show the currently selected Title Card with an icon.

Fixed Bugs:
- Flickering in Resource Explorer View was fixed.
- Early stopping of Resource preview load in Explorer View was fixed.
- Wheel scrolling of Project card selection fixed.
- When debugging a script, the player is not shown stacked on top of everything.
- Fixed some style bugs.
- Fixed a bug, where Scenes could not be resolved, and thus the Player could not
  start correctly due to different traversal of the SceneFlow.
- Fixed EOS teases setting a non-image file as Title Image.
- General tease download (UI) fixes.
- Editor search bar fixes.

=================
Version 1.2.2.0
=================

Fixed Bugs:
- Fixed Tutorials not working.
- Fixed EOS script commands with empty arrays not evaluating correctly.
- Fixed JS import parsing for aliases containing "as".
- Fixed missing images in default style
- Fixed being able to set editor layout to "none" (default value) in settings.
- Cosmetic fixes in html help.

=================
Version 1.2.3.0
=================

Changes:
- EOS script files have a new graphical editor similar to the Milovana editor.
- Project Describtion can be edited in a new richtext editor.
- Added smaller animations to various ui interactions
- Project version warning on card is only shown if project version is larger than
  the current engine version.